[gd_scene load_steps=2 format=3 uid="uid://dxj5m1hv7ww3o"]

[ext_resource type="Script" uid="uid://07fxdiod4fa6" path="res://scripts/tools/BlueprintConverter.gd" id="1"]

[node name="BlueprintConverter" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "ðŸ”§ Conversor de Blueprints"
horizontal_alignment = 1

[node name="Description" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Convierte blueprints del sistema antiguo (Dictionary parameters)
al nuevo sistema con configs especÃ­ficos (ForgeTrialConfig, etc.)

Esto permitirÃ¡ editar la dificultad desde el Inspector con sliders.

ðŸ†• ACTUALIZAR CONFIGS: Aplica velocidad, trials y precision a TODOS los blueprints."
autowrap_mode = 3

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Esperando..."

[node name="ProgressBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
show_percentage = false

[node name="ConvertButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "â–¶ Convertir Blueprints"

[node name="UpdateButton" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "ðŸ†• ACTUALIZAR Configs (Velocidad/Trials/Precision)"

[node name="HSeparator2" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Log de conversiÃ³n:"

[node name="LogOutput" type="TextEdit" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
wrap_mode = 1
